# claude-code-cpp

./: .dockerenv  .dockerignore  .env.example  .gitignore  BUILD_GUIDE.md  CHANGELOG.md  CMakeLists.txt  COMPLETION_REPORT.md  CONTRIBUTING.md  DEV_PROGRESS.md  DEV_SUMMARY.md  Dockerfile  Dockerfile.dev  FINAL_COMPLETION_REPORT.md  LICENSE  MERGE_REPORT.md  NEXT_STEPS.md  P1_ASSESSMENT.md  PUSH_GUIDE.md  README.md  VERIFICATION_REPORT.md  build.sh  deploy.sh  docker-compose.yml
.claude/: CLAUDE.md
docker/: entrypoint.sh  healthcheck.sh
docs/: CI_CD.md  P0-core-engine.md  P1-tools.md  claude-code-cpp-architecture.docx  claude-code-cpp-container-deployment.docx  claude-code-cpp-deployment.docx
docs/ci/: docker-ci.yml  docker-release.yml
scripts/: setup-env.sh
src/: main.cpp
src/agent/: agent_manager.cpp  agent_manager.h  coordinator.cpp  coordinator.h  message_bus.cpp  message_bus.h  team.cpp  team.h
src/api/: anthropic_client.cpp  anthropic_client.h  auth.cpp  auth.h  sse_parser.cpp  sse_parser.h
src/app/: cli.cpp  cli.h  config.cpp  config.h  lifecycle.cpp  lifecycle.h
src/bridge/: bridge_server.cpp  bridge_server.h  session_manager.cpp  session_manager.h
src/commands/: command_registry.cpp  command_registry.h  command_system.cpp  command_system.h
src/engine/: context_builder.cpp  context_builder.h  cost_tracker.cpp  cost_tracker.h  message.cpp  message.h  query_engine.cpp  query_engine.h  query_pipeline.cpp  query_pipeline.h  stream_parser.cpp  stream_parser.h
src/memory/: memory_store.cpp  memory_store.h
src/permissions/: permission_manager.cpp  permission_manager.h  permission_mode.h  sandbox.cpp  sandbox.h
src/plugins/: plugin_api.cpp  plugin_api.h  plugin_loader.cpp  plugin_loader.h
src/protocol/: json_rpc.cpp  json_rpc.h
src/protocol/lsp/: lsp_client.cpp  lsp_client.h  lsp_types.h
src/protocol/mcp/: mcp_auth.cpp  mcp_auth.h  mcp_client.cpp  mcp_client.h  mcp_transport.cpp  mcp_transport.h  mcp_types.h
src/state/: app_state.cpp  app_state.h
src/tools/: agent_tool.cpp  agent_tool.h  bash_tool.cpp  bash_tool.h  file_edit_tool.cpp  file_edit_tool.h  file_read_tool.cpp  file_read_tool.h  file_write_tool.cpp  file_write_tool.h  glob_tool.cpp  glob_tool.h  glob_tool_native.cpp  glob_tool_native.h  grep_tool.cpp  grep_tool.h  lsp_tool.cpp  lsp_tool.h  mcp_tool.cpp  mcp_tool.h  todo_write_tool.cpp  todo_write_tool.h  tool_base.h  tool_registry.cpp  tool_registry.h  web_fetch_tool.cpp  web_fetch_tool.h  web_search_tool.cpp  web_search_tool.h
src/ui/: output_renderer.cpp  output_renderer.h  terminal.cpp  terminal.h
src/util/: crypto_utils.cpp  crypto_utils.h  file_utils.cpp  file_utils.h  git_utils.cpp  git_utils.h  platform.cpp  platform.h  process_utils.cpp  process_utils.h  string_utils.cpp  string_utils.h
tests/: README.md
tests/integration/: tool_integration_test.cpp
tests/unit/: main.cpp  test_sse_parser.cpp
